Use profiles to separate between fast tests and oome test.