@@ -119,8 +119,85 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <useSystemClassLoader>true</useSystemClassLoader>
+                    <useManifestOnlyJar>false</useManifestOnlyJar>
+                    <argLine>-Xmx2g -XX:MaxPermSize=128m -XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError</argLine>
+                    <forkMode>once</forkMode>
+                    <failIfNoTests>false</failIfNoTests>
+                    <junitArtifactName>none:none</junitArtifactName>
+                    <testNGArtifactName>none:none</testNGArtifactName>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>fasttests</id>
+            <activation>
+                <property>
+                    <name>testgroup</name>
+                    <value>fast</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <skipTests>false</skipTests>
+                                    <excludedGroups>oome</excludedGroups>
+                                    <junitArtifactName>none:none</junitArtifactName>
+                                    <testNGArtifactName>org.testng:testng</testNGArtifactName>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>oometest</id>
+            <activation>
+                <property>
+                    <name>testgroup</name>
+                    <value>oome</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <skipTests>false</skipTests>
+                                    <excludedGroups>fast</excludedGroups>
+                                    <junitArtifactName>none:none</junitArtifactName>
+                                    <testNGArtifactName>org.testng:testng</testNGArtifactName>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
